<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sport_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SportActivity"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_centerInParent="false"
            android:id="@+id/titreSport"
            android:text="@string/lbl_titreSport"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saisieSport"
            android:autofillHints="no"
            android:inputType="text"
            android:layout_below="@+id/titreSport"
            tools:ignore="LabelFor" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/saisieSport"
            android:text="@string/chk_dureeSport"
            android:id="@+id/chkDureeSport"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/saisieSport"
            android:layout_toEndOf="@+id/chkDureeSport"
            android:text="@string/chk_distanceSport"
            android:id="@+id/chkDistanceSport"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enregistrer"
            android:text="@string/btn_enregistrerSport"
            android:layout_below="@+id/chkDureeSport"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rechercher"
            android:text="@string/btn_rechercherSport"
            android:layout_below="@+id/enregistrer"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/afficheSport"
            android:layout_below="@+id/rechercher" />



    </RelativeLayout>

    <com.test.objectifs_sportifs.NavigationMenu
        android:layout_gravity="start"
        android:layout_height="match_parent"
        android:layout_width="wrap_content" />

</androidx.drawerlayout.widget.DrawerLayout>