<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_objectif_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ObjectifActivity"
    tools:openDrawer="start">

    <!-- Partie Visualisation -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:id="@+id/layoutVisualisationObjectif" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_centerInParent="false"
            android:id="@+id/titreVisualisationObjectif"
            android:text="@string/lbl_titreVisualisationObjectif"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerInParent="true"
            android:id="@+id/nouveauObjectif"
            android:text="@string/btn_nouveauObjectif"
            android:layout_below="@+id/titreVisualisationObjectif"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblListeEnCoursVisualisationObjectif"
            android:text="@string/txt_listeEnCoursVisualisationObjectif"
            android:textSize="15sp"
            android:layout_below="@+id/nouveauObjectif" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listeEnCoursVisualisationObjectif"
            android:layout_below="@+id/lblListeEnCoursVisualisationObjectif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblListeHistoriqueVisualisationObjectif"
            android:text="@string/txt_listeHistoriqueVisualisationObjectif"
            android:textSize="15sp"
            android:layout_below="@+id/listeEnCoursVisualisationObjectif" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listeHistoriqueVisualisationObjectif"
            android:layout_below="@+id/lblListeHistoriqueVisualisationObjectif" />

    </RelativeLayout>

    <!-- Partie Ajout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutVisualisationObjectif"
        android:visibility="invisible"
        android:id="@+id/layoutAjoutObjectif" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAlignment="center"
            android:layout_centerInParent="false"
            android:id="@+id/titreAjoutObjectif"
            android:text="@string/lbl_titreAjoutObjectif"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titreAjoutObjectif"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/libelleAjoutObjectif"
            android:id="@+id/lblLibelleAjoutObjectif"
            android:text="@string/lbl_libelleAjoutObjectif"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titreAjoutObjectif"
            android:layout_toEndOf="@+id/lblLibelleAjoutObjectif"
            android:inputType="text"
            android:id="@+id/libelleAjoutObjectif"
            android:autofillHints="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/libelleAjoutObjectif"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/dateAuAjoutObjectif"
            android:id="@+id/lblDateAuAjoutObjectif"
            android:text="@string/lbl_dateAuAjoutObjectif"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/libelleAjoutObjectif"
            android:layout_toEndOf="@+id/lblDateAuAjoutObjectif"
            android:inputType="date"
            android:maxLength="10"
            android:id="@+id/dateAuAjoutObjectif"
            android:autofillHints="no" />

        <Spinner
            android:id="@+id/listeSportsAjoutObjectif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateAuAjoutObjectif"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:spinnerMode="dialog" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/listeSportsAjoutObjectif"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:id="@+id/chkDistanceAjoutObjectif"
            android:text="@string/chk_distanceAjoutObjectif"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_saisiObjectifAjoutObjectif"
            android:layout_below="@+id/chkDistanceAjoutObjectif"
            android:labelFor="@+id/saisieDistanceAjoutObjectif"
            android:id="@+id/lblSaisiObjectifAjoutObjectif" />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/choixDureeAjoutObjectif"
            android:layout_below="@+id/chkDistanceAjoutObjectif"
            android:timePickerMode="spinner"
            android:visibility="invisible"
            android:layout_centerInParent="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/saisieDistanceAjoutObjectif"
            android:inputType="numberDecimal"
            android:text=""
            android:visibility="invisible"
            android:maxLength="10"
            android:layout_toEndOf="@+id/lblSaisiObjectifAjoutObjectif"
            android:layout_below="@+id/chkDistanceAjoutObjectif"
            android:autofillHints="no" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/choixDureeAjoutObjectif"
            android:id="@+id/retourAjoutObjectif"
            android:text="@string/btn_retourObjectif" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/choixDureeAjoutObjectif"
            android:id="@+id/validerAjoutObjectif"
            android:text="@string/btn_demarrerObjectif" />

    </RelativeLayout>

    <!-- TODO => mettre les texts dans le string.xml -->

    <com.test.objectifs_sportifs.NavigationMenu
        android:layout_gravity="start"
        android:layout_height="match_parent"
        android:layout_width="wrap_content" />

</androidx.drawerlayout.widget.DrawerLayout>